--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         method="post"
         enctype="multipart/form-data"
         autocomplete="off">
-
     <div class="setup-title">
       <div class="setup-user">
         <div class="upload">
@@ -210,6 +209,7 @@
 
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
+<script src="js/setup.js"></script>
 
 </body>
 </html>
